fixed squished image

--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -46,6 +46,7 @@
           & img {
             height: 200px;
             width: 200px;
+            object-fit: cover;
             border-radius: 50%;
           }
 
